--- a/client/main.scss
+++ b/client/main.scss
@@ -6,4 +6,8 @@
 @import "../imports/ui/styles/_elements--html";
 @import "../imports/ui/styles/_elements--body";
 
+@import "../imports/ui/styles/_objects--flex-column";
+@import "../imports/ui/styles/_objects--flex-row";
+
+
 @import "../imports/ui/styles/_component--header";
