contact page styling

--- a/client/main.scss
+++ b/client/main.scss
@@ -2,12 +2,17 @@
 
 @import "../imports/ui/styles/_settings--reset";
 @import "../imports/ui/styles/_settings--fonts";
+@import "../imports/ui/styles/_settings--colors";
 
 @import "../imports/ui/styles/_elements--html";
 @import "../imports/ui/styles/_elements--body";
+@import "../imports/ui/styles/_elements--text";
+@import "../imports/ui/styles/_elements--link";
 
 @import "../imports/ui/styles/_objects--flex-column";
 @import "../imports/ui/styles/_objects--flex-row";
-
+@import "../imports/ui/styles/_objects--layout";
+@import "../imports/ui/styles/_objects--form";
 
 @import "../imports/ui/styles/_component--header";
+@import "../imports/ui/styles/_component--navbar";
