--- a/imports/ui/styles/_objects--flex-row.scss
+++ b/imports/ui/styles/_objects--flex-row.scss
@@ -6,6 +6,9 @@
     justify-content: center;
     text-align: center;
   }
+  &__align-v-center {
+    justify-content: center;
+  }
   &__direction-vertical {
     flex-direction: column;
   }
