form confirmation and index design

--- a/client/main.scss
+++ b/client/main.scss
@@ -16,3 +16,5 @@
 
 @import "../imports/ui/styles/_component--header";
 @import "../imports/ui/styles/_component--navbar";
+@import "../imports/ui/styles/_component--page-title";
+@import "../imports/ui/styles/_component--content";
