--- a/imports/ui/styles/_component--navbar.scss
+++ b/imports/ui/styles/_component--navbar.scss
@@ -1,8 +1,9 @@
 .navbar {
-  height: 60px;
+  height: 80px;
+  clip-path: polygon(0 0, 100% 0, 100% 20%, 0 100%);
   &__canvas {
     width: 100%;
-    height: 60px;
+    height: 80px;
     position: absolute;
     left: 0;
     top: 0;
