divider and at a glance layout

--- a/imports/ui/styles/_objects--layout.scss
+++ b/imports/ui/styles/_objects--layout.scss
@@ -10,6 +10,10 @@
     }
   }
   &__section {
-    padding: 60px 0;
+    padding: 40px 0;
+  }
+  &__section-title {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
   }
 }
