--- a/client/main.scss
+++ b/client/main.scss
@@ -18,3 +18,5 @@
 @import "../imports/ui/styles/_component--navbar";
 @import "../imports/ui/styles/_component--page-title";
 @import "../imports/ui/styles/_component--content";
+@import "../imports/ui/styles/_component--list-grid";
+@import "../imports/ui/styles/_component--divider";
