--- a/imports/ui/styles/_component--header.scss
+++ b/imports/ui/styles/_component--header.scss
@@ -1,7 +1,8 @@
 .header {
   position: relative;
   color: #ffffff;
-  clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+  clip-path: polygon(0 60px, 100% 0, 100% calc(100% - 60px), 0 100%);
+  margin-bottom: 30px;
   &__navbar {
     padding: 10px;
     width: 100%;
@@ -15,6 +16,8 @@
   &__social-links {
     display: inline-block;
     border-left: 2px solid rgba(255,255,255,.7);
+    margin-left: 7px;
+    padding-left: 7px;
   }
   &__social-icon {
     display: inline-block;
