--- a/imports/ui/styles/_objects--flex-row.scss
+++ b/imports/ui/styles/_objects--flex-row.scss
@@ -1,6 +1,9 @@
 .flex-row {
   display: flex;
   flex-wrap: nowrap;
+  &--wrap {
+    flex-flow: row wrap;
+  }
   &__align-center {
     align-items: center;
     justify-content: center;
