--- a/imports/ui/styles/_component--header.scss
+++ b/imports/ui/styles/_component--header.scss
@@ -14,10 +14,13 @@
     }
   }
   &__social-links {
-    display: inline-block;
-    border-left: 2px solid rgba(255,255,255,.7);
-    margin-left: 7px;
-    padding-left: 7px;
+    display: block;
+    @media screen and (min-width: 500px) {
+      display: inline-block;
+      border-left: 2px solid rgba(255,255,255,.7);
+      margin-left: 7px;
+      padding-left: 7px;
+    }
   }
   &__social-icon {
     display: inline-block;
