--- a/client/main.scss
+++ b/client/main.scss
@@ -20,3 +20,5 @@
 @import "../imports/ui/styles/_component--content";
 @import "../imports/ui/styles/_component--list-grid";
 @import "../imports/ui/styles/_component--divider";
+@import "../imports/ui/styles/_component--blank-list";
+@import "../imports/ui/styles/_component--at-a-glance";
