work history layout

--- a/client/main.scss
+++ b/client/main.scss
@@ -22,3 +22,4 @@
 @import "../imports/ui/styles/_component--divider";
 @import "../imports/ui/styles/_component--blank-list";
 @import "../imports/ui/styles/_component--at-a-glance";
+@import "../imports/ui/styles/_component--work-history";
